[UPDATED] poster-block alignment,button size, slider fixed (#26)

--- a/website/events/static/css/eventdetails.css
+++ b/website/events/static/css/eventdetails.css
@@ -46,6 +46,7 @@ body{
   max-width: 100vw;
   justify-content: center;
   margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 
 .about-event{
@@ -219,9 +220,9 @@ img{
   display: flex;
   flex-direction: column !important;
   align-items: flex-start;
-  width: 50%;
+  width: 52%;
   height: max-content;
-  max-width: 50vw;
+  max-width: 52vw;
   flex-direction: column;
   padding-left: 4rem;
   padding-bottom: 0%;
@@ -234,9 +235,11 @@ img{
   display: flex;
   flex: 1;
   height: 88%;
+  max-height: 88vh;
   justify-content: flex-end;
   align-items: center;
-  width: 100%;
+  width: 50%;
+  max-width: 50vw;
   padding-left: 10PX;
   padding-right: 10px;
   padding: 1rem;
@@ -497,6 +500,7 @@ img{
   overflow:hidden !important;
   align-items: center !important;
   margin-left: 10%;
+  padding-right: 5% !important;
 }
 
 .swiper-wrapper {
@@ -1066,7 +1070,7 @@ img{
   float: left;
   margin-left: calc(15% - 15px);
   margin-right: 15%;
-  margin-top: 5%;
+  margin-top: 4.2%;
   width: 100%;  
   padding:0 !important;
   border-left: 3px solid var(--theme-color);
@@ -1316,22 +1320,247 @@ img{
 /* BACK BUTTON */
 .back-btn-eve{
   margin-left: 0.8rem;
-  color: var(--theme-color);
+  color: #000000c7;
+    text-shadow: 1.5px 2px 1.5px rgb(0 0 0 / 30%);
+    transform: scale(0.88);
   font-family: 'Roboto', sans-serif;
-  font-size: 1rem;
   padding-top: 1rem;
-  font-size: 3rem;
+  font-size: 2rem;
   transition: 0.5s;
 }
 
-.back-btn-eve:hover {
-  cursor: pointer;
-  opacity: 1;
-  transform: translateY(5px);
-}
 
-@media (min-width: 769px) {
+
+@media (min-width: 1150px) {
   .back-btn-eve{
     padding-top: 1rem;
   }
+  .back-btn-eve:hover {
+    cursor: pointer;
+    opacity: 1;
+  transform: translateY(63px) translateX(-0.5%) ;
+  }
 }
+@media (max-width: 1149px) {
+  .back-btn-eve{
+    transform: translateX(6.5%);
+  }
+  .back-btn-eve:hover {
+   cursor: pointer;
+   opacity: 1;
+  transform: translateY(5px) translateX(6.5%);
+  }
+}
+@media (max-width: 900px) {
+  .back-btn-eve{
+    transform: translateX(1%);
+  }
+  .back-btn-eve:hover {
+   cursor: pointer;
+   opacity: 1;
+  transform: translateY(5px) translateX(1%);
+  }
+}
+@media (max-width: 640px) {
+  .back-btn-eve{
+    transform: translateX(0%);
+  }
+  .back-btn-eve:hover {
+   cursor: pointer;
+   opacity: 1;
+  transform: translateY(5px) translateX(0%);
+  }
+}
+
+/******* new code *****/
+@media (max-width: 400px) {
+  .back-btn-eve{
+    transform: translateX(-2%);
+  }
+  .back-btn-eve:hover {
+   cursor: pointer;
+   opacity: 1;
+  transform: translateY(5px) translateX(-2%);
+  }
+}
+
+.swiper-pagination{
+  left: -12.5% !important;
+}
+@media screen and (max-width: 450px) and (min-width: 400px)
+{
+  .container-slider-glade{
+    width: 100% !important;
+    max-width: 100vw !important;
+    transform: translateX(4%) scaleX(1.2) scaleY(1.05);
+  }
+
+  .swiper-pagination{
+    left: -1% !important;
+  }
+ 
+}
+@media screen and (max-width: 400px) and (min-width: 350px)
+{
+  .container-slider-glade{
+    width: 100% !important;
+    max-width: 100vw !important;
+    transform: translateX(1%) scaleX(1.2) scaleY(1.05);
+  }
+
+  .swiper-pagination{
+    left: -2% !important;
+  }
+ 
+}
+@media (min-width: 1150px) 
+{
+  .btn-register{
+transform: scale(0.8);
+  }
+ .prize{
+   transform: translateX(-12px) scale(0.82);
+ }
+}
+@media (min-width: 1200px) 
+{
+  .btn-register{
+transform: scale(0.85);
+  }
+ .prize{
+   transform: translateX(-12px) scale(0.9);
+ }
+}
+/*** poster and description ***/
+@media (min-width: 400px) 
+{
+  .eve_img{
+    width: 100%;
+    max-width: 100vw;
+    height: 100%;
+    max-height: 80vh;
+    padding: 0%;
+    margin: 0%;
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    transform: translateX(-20px);
+  }
+  .poster-eve{
+    width: 100%;
+    height: 100%;
+    max-width: 85vw;
+    min-height: 75vw;
+    max-height: 85vw;
+  }
+}
+@media (min-width: 900px) 
+{
+  .eve_img{
+    width: 100%;
+    max-width: 100vw;
+    /* min-width: 70vh; */
+    height: 100%;
+    max-height: 100vh;
+    min-height: 70vh;
+    padding: 0%;
+    margin: 0%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translateX(-20px);
+  }
+  .poster-eve{
+    width: 100%;
+    height: 100%;
+    max-width: 70vw;
+    min-height: 65vh;
+    max-height: 80vh;
+  }
+}
+@media (min-width: 1150px) 
+{
+  .eve_img{
+    width: 48%;
+    max-width: 48vw;
+    height: 88;
+    max-height: 70vh;
+    transform: translateX(20px);
+  }
+  .poster-eve{
+    width: 100%;
+    height: 100%;
+    min-height: 69vh;
+    max-width: 50vw !important;
+    max-height: 71vh !important;
+   
+  }
+}
+@media (max-width: 1150px) 
+{
+  .eve_descrip{
+    transform: translateX(-10px);
+  }
+}
+@media (min-width: 1150px) 
+{
+  .btn_eve{
+    transform: translateX(-5%); /***participate button alignment**/
+  }
+}
+/*** back button fixing ***/
+timeline{
+  margin-top: 5rem;
+}
+@media (min-width: 1150px) 
+{
+  .back-btn-eve{
+    transform: translateY(calc(108px - 1.8rem - 35px)) translateX(-0.5%); 
+  }
+  
+  .section-header{
+    margin-top: 0rem;
+  }
+  .timeline{
+    margin-top: 10vh;
+    margin-bottom: 0;
+  }
+  .glipmses{
+    margin-top: 10vh;
+  }
+}
+@media (min-width: 500px) 
+{
+  .swiper-container{
+    width: 85%;
+    max-width: 85vw;
+    padding: 0% !important;
+    padding-right: 0rem !important;
+    margin:0% !important;
+    margin-left: 7.5% !important;
+  }
+}
+@media (max-width: 600px) 
+{
+  .swiper-container{
+    
+    padding-right: 0rem !important;
+  
+    /* margin-left: 7.5% !important; */
+  }
+  .card-image{
+    transform: scale(1.25) translateX(-22px);
+  }
+}
+@media screen and (max-width: 1730px) and (min-width: 1630px)
+{
+  .swiper-container{
+    padding-right: 4% !important;
+  }
+  }
+  @media screen and (max-width: 1320px) and (min-width: 1150px)
+{
+ .eve_descrip{
+   padding-right: 25px;
+ }
+  }
